# fastapi-structure

./: .gitignore  Dockerfile  Makefile  pyproject.toml
app/application/api/: main.py
app/domain/entities/: messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: messages.py
